# Colosseum

./: AirSim.sln  build.cmd
AirLib/include/common/: ImageCaptureBase.hpp
HelloCar/: HelloCar.vcxproj  gpu_dct.cu  gpu_dct.cuh  gpu_dct.h  main.cpp  main.cu
HelloQt/: DatasetHelpers.cpp  DatasetHelpers.h  ImageThread.cpp  ImageThread.h  camera_view_widget.cpp  camera_view_widget.h  game_view_widget.cpp  game_view_widget.h  gpu_dct.cu  gpu_dct.cuh  mainwindow.cpp  mainwindow.h  mainwindow.ui  robot_control.cpp  robot_control.h  robot_map_widget.cpp  robot_map_widget.h  sh_transform.cu  sh_transform.cuh  simulation.h  simulation_tab_widget.cpp  simulation_tab_widget.h  spherical_harmonics.hpp  worker_thread.cpp  worker_thread.h
Unreal/Environments/Blocks/Config/: DefaultEngine.ini
Unreal/Environments/Blocks/Content/MDL/Base/: OmniGlass.uasset  OmniGlass_Opacity.uasset  OmniHair.uasset  OmniHair_Auburn.uasset  OmniHair_Black.uasset  OmniHair_Blonde.uasset  OmniHair_Brown.uasset  OmniHair_Wet.uasset  OmniPBR.uasset  OmniPBRBase.uasset  OmniPBR_ClearCoat.uasset  OmniPBR_ClearCoat_Opacity.uasset  OmniPBR_Opacity.uasset  OmniSurface.uasset  OmniSurfaceBlend.uasset  OmniSurfaceLite.uasset  OmniSurface_Blood.uasset  OmniSurface_BrushedMetal.uasset  OmniSurface_Bubble.uasset  OmniSurface_CarPaint.uasset  OmniSurface_CarPaintMetallic.uasset  OmniSurface_Ceramic.uasset  OmniSurface_Chrome.uasset  OmniSurface_Clay.uasset  OmniSurface_ClearWater.uasset  OmniSurface_Copper.uasset  OmniSurface_DeepWater.uasset  OmniSurface_Default.uasset  OmniSurface_Diamond.uasset  OmniSurface_DustedGlass.uasset  OmniSurface_Foam.uasset  OmniSurface_FrostedGlass.uasset  OmniSurface_Glass.uasset  OmniSurface_GlossyPaint.uasset  OmniSurface_Gold.uasset  OmniSurface_Honey.uasset  OmniSurface_IncandescentBulb.uasset  OmniSurface_Jade.uasset  OmniSurface_MapleSyrup.uasset  OmniSurface_OrangeJuice.uasset  (+13 more)
Unreal/Environments/Blocks/Content/MDL/Base/gltf/: gltf_material.uasset  gltf_material_khr_specular_glossiness.uasset
Unreal/Environments/Blocks/Content/MDL/Functions/: mdl_OmniImage_native_wrap_mode.uasset  mdl_OmniSurface_OmniImage_compute_latitude_longitude_projection.uasset  mdl_OmniSurface_OmniImage_compute_texture_coordinate_2.uasset  mdl_OmniSurface_OmniImage_normal_mapping.uasset  mdl_OmniSurface_OmniImage_tangent_space_normal_lookup_2.uasset  mdl_OmniSurface_OmniImage_texture_alpha_channel_remap_2.uasset  mdl_OmniSurface_OmniImage_texture_lookup_2.uasset  mdl_OmniSurface_OmniShared_displacement_adjustment.uasset  mdl_OmniSurface_OmniShared_ior_preset_to_value.uasset  mdl_OmniSurface_OmniShared_melanin_concentration_preset_to_value.uasset  mdl_OmniSurface_OmniShared_scattering_colors_preset_to_value.uasset  mdl_base_blend_color_layers_1.uasset  mdl_base_coordinate_projection.uasset  mdl_base_coordinate_source.uasset  mdl_base_file_texture.uasset  mdl_base_rotation_translation_scale.uasset  mdl_base_tangent_space_normal_texture.uasset  mdl_base_texture_coordinate_info.uasset  mdl_base_transform_coordinate.uasset  mdl_df_chiang_hair_bsdf.uasset  mdl_df_diffuse_edf.uasset  mdl_df_fresnel_layer.uasset  mdl_df_microfacet_ggx_smith_bsdf.uasset  mdl_df_simple_glossy_bsdf.uasset  mdl_gltf_pbr_compute_opacity.uasset  mdl_gltf_pbr_convert_wrap_mode.uasset  mdl_gltf_pbr_gltf_normal_texture_lookup.uasset  mdl_gltf_pbr_gltf_prepare_normal.uasset  mdl_gltf_pbr_gltf_prepare_tex_float3.uasset  mdl_gltf_pbr_gltf_prepare_tex_float4.uasset  mdl_gltf_pbr_gltf_texture_lookup.uasset  mdl_gltf_pbr_khr_texture_transform_apply.uasset  mdl_math_average.uasset  mdl_math_cos_float.uasset  mdl_math_cos_float3.uasset  mdl_math_log_float3.uasset  mdl_math_luminance.uasset  mdl_math_max_value.uasset  mdl_math_max_value_float3.uasset  mdl_math_min_value.uasset  (+47 more)
Unreal/Plugins/AirSim/Content/Blueprints/: BP_PIPCamera.uasset
Unreal/Plugins/AirSim/Source/: AirBlueprintLib.cpp  DetectionComponentCube.cpp  DetectionComponentCube.h  PIPCamera.cpp  PIPCamera.h  RenderRequest.cpp  RenderRequest.h  UnrealImageCapture.cpp
Unreal/Plugins/AirSim/Source/SimHUD/: SimHUD.cpp  SimHUD.h  SimHUDWidget.h
Unreal/Plugins/AirSim/Source/Vehicles/ComputerVision/: ComputerVisionPawn.cpp
cmake/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  AirSim.sln  CMakeLists.txt  build.cmd
cmake/HelloCar/: CMakeLists.txt
cmake/HelloQt/: CMakeLists.txt  build.cmd
gpu_dct/: gput_dct.cuh
